<resources>
    <string name="app_name">EagleLock</string>
    <string name="waiting">请稍候</string>
    <string name="input_phone_email">请输入手机号或邮箱</string>
    <string name="send_code">发送验证码</string>
    <string name="login">登录</string>
    <string name="remember_me">记住密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="regist_immediately">立即注册</string>
    <string name="regist">注册</string>
    <string name="input_can_not_null">输入不能为空</string>
    <string name="regex_phone">^1[345678]\\d{9}$</string>
    <string name="phone_no_match">手机号不匹配</string>
    <string name="getcode">发送验证码</string>
    <string name="vali_code">验证码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="go_login_msg">已有帐号，立即登录</string>
    <string name="input_account">请输入帐号</string>
    <string name="regist_success">注册成功！</string>
    <string name="login_rediect">直接登录</string>
    <string name="input_error">输入有误</string>
    <string name="user_registed">用户已注册</string>
    <string name="search">搜索</string>
    <string name="device_list">设备列表</string>
    <string name="device_num_format">共%d台设备</string>
    <string name="add_device">添加设备</string>
    <string name="list">列表</string>
    <string name="add_device_hint">请点亮触摸屏，使锁进入可编辑状态</string>
    <string name="next">下一步</string>
    <string name="add">添加</string>
    <string name="click_unlock">点击开锁</string>
    <string name="send_key">发送钥匙</string>
    <string name="send_pwd">发送密码</string>
    <string name="key_manage">钥匙管理</string>
    <string name="pwd_manage">密码管理</string>
    <string name="ic_card">IC卡</string>
    <string name="fingerprint">指纹</string>
    <string name="control_record">操作记录</string>
    <string name="setting">设置</string>
    <string name="unlock_success">开锁成功</string>
    <string name="input_new_pwd">请设置新密码</string>
    <string name="set_new_pwd">设置新密码</string>
    <string name="setting_failure">设置失败</string>
    <string name="use_immediately">立即使用</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="authorize_failure">授权失败</string>
    <string name="use_system_permission_msg">为了保证您的应用正常使用，请允许系统设置权限</string>
    <string name="create_pwd">生成密码</string>
    <string name="operation_time">生效时间</string>
    <string name="lose_efficacy_time">失效时间</string>
    <string name="repeat_method">循环方式</string>
    <string name="number">编号</string>
    <string name="mac">MAC</string>
    <string name="power">电量</string>
    <string name="lock_name">锁名称</string>
    <string name="time_calibration">时间校准</string>
    <string name="admin_unlock_pwd">管理员开锁密码</string>
    <string name="input_name">请输入名称</string>
    <string name="edit_failure">修改失败</string>
    <string name="edit_success">修改成功</string>
    <string name="delete">删除</string>
    <string name="delete_failure">删除失败</string>
    <string name="calibration_success">校准成功</string>
    <string name="reset_key">重置钥匙</string>
    <string name="clear_key">清空钥匙</string>
    <string name="send_success">发送成功</string>
    <string name="send_failure">发送失败</string>
    <string name="send">发送</string>
    <string name="send_signle_key_hint">单次钥匙有效期为1小时，只能使用一次</string>
    <string name="key_type">钥匙类型</string>
    <string name="time_choose_error">时间选择有误</string>
    <string name="reset_success">重置成功</string>
    <string name="reset_failure">重置失败</string>
    <string name="admin">管理员</string>
    <string name="user">用户</string>
    <string name="expiry_date">有效期</string>
    <string name="authorize_success">授权成功</string>
    <string name="unauth_success">取消授权成功</string>
    <string name="unauth_failure">取消授权失败</string>
    <string name="freezekey_failure">冻结失败</string>
    <string name="freezekey_success">冻结成功</string>
    <string name="unfreezekey_failure">取消冻结失败</string>
    <string name="unfreezekey_success">取消冻结成功</string>
    <string name="delete_success">删除成功</string>
    <string name="key_info">钥匙信息</string>
    <string name="freeze">冻结</string>
    <string name="auth">授权</string>
    <string name="clear_msg">是否清空？</string>
    <string name="reset_key_msg">该锁的电子钥匙都将被删除</string>
    <string name="reset_pwd_msg">该锁的用户密码都将被删除</string>
    <string name="unauth">解除授权</string>
    <string name="unfreeze">解除冻结</string>
    <string name="freeze_key_msg">确定冻结？</string>
    <string name="unfreeze_key_msg">取消冻结？</string>
    <string name="auth_key_msg">授权用户可以发送该所的电子钥匙和密码</string>
    <string name="unauth_msg">取消授权？</string>
    <string name="unauth_key_msg">取消授权？</string>
    <string name="name">名称</string>
    <string name="received_account">接收人帐号</string>
    <string name="sender">发送人</string>
    <string name="send_date">发送日期</string>
    <string name="delete_msg">确定删除？</string>
    <string name="reset_pwd">重置密码</string>
    <string name="setting_success">设置成功</string>
    <string name="connect_failure">连接失败</string>
    <string name="freezed">已冻结</string>
    <string name="ic_manage">IC卡管理</string>
    <string name="clear_ic">清空IC卡</string>
    <string name="add_ic">添加IC卡</string>
    <string name="add_fr">添加指纹</string>
    <string name="clear_fr">清空指纹</string>
</resources>
