<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/immersive"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_eeeeee"
    android:orientation="vertical"
    tools:context=".function.ui.SettingActivity">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/ibtn_return"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:src="@mipmap/set_icon_return"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <View
            android:id="@+id/v_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_line"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/number"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:text="@string/number"
            android:textColor="@color/gray_a4b1c1"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_line"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="15dp"
            android:text="@string/mac"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingEnd="15dp"
            android:text="@string/mac"
            android:textColor="@color/gray_a4b1c1"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_line"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="15dp"
            android:text="@string/power"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingRight="15dp"
            android:text="@string/power"
            android:textColor="@color/gray_a4b1c1"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_line"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_lock_name"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="15dp"
            android:text="@string/lock_name"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_lock_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingEnd="15dp"
            android:text="@string/lock_name"
            android:textColor="@color/gray_a4b1c1"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_line"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_date"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="15dp"
            android:text="@string/expiry_date"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingEnd="15dp"
            android:text="@string/expiry_date"
            android:textColor="@color/gray_a4b1c1"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_line"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_time_calibration"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="15dp"
            android:text="@string/time_calibration"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/user_btn_enter"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_line"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_admin_pwd"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="15dp"
            android:text="@string/admin_unlock_pwd"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_admin_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingEnd="15dp"
            android:textSize="16sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line"/>

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_delete_bg_shape"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="16sp"/>
</LinearLayout>