<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/immersive"
    tools:context=".function.ui.AddLockHintActivity">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="49dp">

        <ImageButton
            android:id="@+id/ibtn_return"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:src="@mipmap/set_icon_return"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/add_device"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:src="@mipmap/add_photo_lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_title"/>

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/add_device_hint"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_hint"/>

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="91dp"
        android:background="@drawable/btn_login_bg_shape"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint"/>
</android.support.constraint.ConstraintLayout>