<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_time"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/rl_repeat"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/white"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingStart="16dp"
                android:text="@string/repeat_method"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="周一"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_line"/>

        <RelativeLayout
            android:id="@+id/rl_start_time"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="16dp"
                android:text="@string/operation_time"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="16dp"
                android:textColor="@color/gray_a4b1c1"
                android:textSize="16sp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_line"/>

        <RelativeLayout
            android:id="@+id/rl_end_time"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="16dp"
                android:text="@string/lose_efficacy_time"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="16dp"
                android:textColor="@color/gray_a4b1c1"
                android:textSize="16sp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_line"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_create_pwd"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_time">

        <TextView
            android:id="@+id/tv_pwd"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:textColor="@color/black_333333"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_create_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_pwd"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/create_pwd"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_pwd"
            android:paddingTop="20dp"
            android:text="密码在24小时内至少要使用过一次，否则将失效"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>